@@ -4,6 +4,7 @@ MANIFEST                            This file
 Makefile.PL                         Makefile generator
 README                              Get you started with this package
 lib/Redis/CappedCollection.pm
+lib/Redis/CappedCollection/Util.pm
 benchmark_capped.pl                 Redis::CappedCollection benchmark
 example.pl                          Redis::CappedCollection demonstration
 dump_collection                     Dump collection data
