@@ -53,6 +53,10 @@
       "Redis::CappedCollection" : {
          "file" : "lib/Redis/CappedCollection.pm",
          "version" : "1.05"
+      },
+      "Redis::CappedCollection::Util" : {
+         "file" : "lib/Redis/CappedCollection/Util.pm",
+         "version" : "1.05"
       }
    },
    "release_status" : "stable",
