@@ -37,6 +37,9 @@ provides:
   Redis::CappedCollection:
     file: lib/Redis/CappedCollection.pm
     version: 1.05
+  Redis::CappedCollection::Util:
+    file: lib/Redis/CappedCollection/Util.pm
+    version: 1.05
 requires:
   Const::Fast: 0.014
   Digest::SHA1: 2.13
